# mula

./: CMakeLists.txt  CTestConfig.cmake  Doxyfile  Mainpage.dox
cmake/: CPack.cmake  MulaMacros.cmake
core/: CMakeLists.txt  Mainpage.dox  debughelper.cpp  debughelper.h  dictionarydata.cpp  dictionarydata.h  dictionarydataitem.cpp  dictionarydataitem.h  dictionaryinfo.cpp  dictionaryinfo.h  dictionarymanager.cpp  dictionarymanager.h  dictionaryplugin.cpp  dictionaryplugin.h  directoryprovider.cpp  directoryprovider.h  mula_core_export.h  mula_global.h.in  pluginmanager.cpp  pluginmanager.h  singleton.h  translation.cpp  translation.h
core/cmake/: FindMulaCore.cmake
core/tests/: CMakeLists.txt  dictionaryinfotest.cpp  dictionaryinfotest.h  translationtest.cpp  translationtest.h
frontends/: CMakeLists.txt
frontends/desktop/: CMakeLists.txt  main.cpp  mula-desktop.desktop
frontends/fremantle/: CMakeLists.txt  main.cpp  mula-fremantle.desktop
frontends/harmattan/: CMakeLists.txt  MainPage.qml  main.cpp  main.qml  mula-harmattan.desktop
frontends/kde/: CMakeLists.txt  mula_kdefrontend.desktop
frontends/kdeext/: CMakeLists.txt  mula_kdeextfrontend.desktop
frontends/plasma-active/: CMakeLists.txt
frontends/plasmoid/: CMakeLists.txt  plasma-applet-mulafrontend.desktop
frontends/qt/: CMakeLists.txt  mula_qtfrontend.desktop
frontends/touch/: CMakeLists.txt  gluon_touchplayer.desktop  mula_touchfrontend.desktop
lib/core/: CMakeLists.txt  debughelper.cpp  debughelper.h  dictplugin.h  mula_core_export.h  mula_global.h.in  singleton.h
plugins/: CMakeLists.txt  idictionaryplugin.cpp
plugins/multitran/: CMakeLists.txt  README  multitran.cpp  multitran.h
plugins/stardict/: CMakeLists.txt  abstractdictionary.cpp  abstractdictionary.h  abstractindexfile.cpp  abstractindexfile.h  cacheitem.cpp  cacheitem.h  dictionary.cpp  dictionary.h  dictionarybase.cpp  dictionarybase.h  dictionarycache.cpp  dictionarycache.h  dictionaryinfo.cpp  dictionaryinfo.h  dictionaryzip.cpp  dictionaryzip.h  dictzip.cpp  dictzip.h  distance.cpp  distance.h  file.h  indexfile.cpp  indexfile.h  lib.cpp  lib.h  offsetcachefile.cpp  offsetcachefile.h  offsetindex.cpp  offsetindex.h  settingsdialog.cpp  settingsdialog.h  stardict.cpp  stardict.h  stardictdictionaryinfo.cpp  stardictdictionaryinfo.h  stardictdictionarymanager.cpp  stardictdictionarymanager.h  wordentry.cpp  wordentry.h  (+2 more)
plugins/stardict/tests/: CMakeLists.txt  stardictdictionaryinfotest.cpp  stardictdictionaryinfotest.h  wordentrytest.cpp  wordentrytest.h
plugins/swac/: CMakeLists.txt  swac.cpp  swac.h
plugins/web/: CMakeLists.txt  adddictionarydialog.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  web.cpp  web.h
